--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 /* 
 File: style.css
-GUI Assignment: HW3 Creating an Interactive Dynamic Table
+GUI Assignment: HW4a Using the jQuery Plugin
 Copyright (c) 2022 by Roberto. All rights reserved. May be freely copied or
 excerpted for educational purposes with credit to the author.
-updated by Roberto Cruz on 10/30/22
+updated by Roberto Cruz on 11/28/22
  */
 
 body {
